# CARECitizenver1

./: LICENSE  README.md
allsensors_ry-ver/: allsensors_ry-ver.ino
arduino/: arduino.ino
arduino_ver2/: arduino_ver2.ino
esp-idf/: partitions.csv  sdkconfig  sdkconfig.old
esp-idf/main/: CMakeLists.txt  main.c  nmea_parser.c  nmea_parser.h  sensirion_common.c  sensirion_common.h  sensirion_i2c.c  sensirion_i2c.h  sensirion_i2c_hal.c
